<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/loginImage_full"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="center"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/loginimage"
        app:srcCompat="@mipmap/bg_loginhd"
        tools:ignore="MissingPrefix"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context="super_ego.info.masterkit.login.LoginActivity"
        android:layout_alignParentEnd="true">


        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="97dp"
            app:srcCompat="@mipmap/logo_signup"
            android:layout_marginLeft="61dp"
            android:layout_marginRight="75dp" />


        <!-- Login progress -->

        <ProgressBar
            android:id="@+id/login_progress"
            style="@android:style/Widget.Material.Light.ProgressBar.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />


        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="50dp">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@android:color/white"
                    app:counterTextAppearance="@style/TextAppearance.Design.Counter.Overflow">

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        style="@style/Creditionals"
                        android:colorAccent="@color/colorPrimary"
                        android:colorControlActivated="@color/colorPrimary"
                        android:colorControlNormal="@color/colorPrimary"
                        android:hint="@string/prompt_email"
                        android:textColor="@color/colorPrimary"
                        android:textColorHighlight="@color/colorPrimary"
                        android:textColorHint="@color/colorPrimary"
                        android:textColorLink="@color/colorPrimary"
                        android:textStyle="normal|bold" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@android:color/white">

                    <EditText
                        android:id="@+id/password"
                        style="@style/Widget.AppCompat.EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoText="false"
                        android:colorAccent="@color/colorPrimary"
                        android:colorControlActivated="@color/colorPrimary"
                        android:colorControlNormal="@color/colorPrimary"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:selectAllOnFocus="false"
                        android:textColor="@color/colorPrimary"
                        android:textColorHighlight="@color/colorPrimary"
                        android:textColorHint="@color/colorPrimary"
                        android:textColorLink="@color/colorPrimary"
                        android:textStyle="normal|bold" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/email_sign_in_button"
                    style="@android:style/TextAppearance.Material.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_button"
                    android:bottomLeftRadius="10dp"
                    android:bottomRightRadius="10dp"
                    android:elevation="0dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/action_sign_in"
                    android:textColor="@android:color/background_light"
                    android:textStyle="bold"
                    android:topLeftRadius="10dp"
                    android:topRightRadius="10dp"
                    android:typeface="sans" />

                <Button
                    android:id="@+id/forgot_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:autoLink="web"
                    android:background="@color/forgot_button"
                    android:text="@string/forgot_link"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="#ffffff" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</RelativeLayout>